# foodtools

./: .gitignore  CLAUDE.md  DATABASE.md  GENERATE_DOCS_README.md  README.md  START_README.md  biome.json  jq  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  purgeSQS.sh  pyproject.toml  sst-env.d.ts  sst.config.ts  sst.pyi
.claude/: settings.local.json
.github/workflows/: tests.yml
infra/: config.ts  database.ts  nextPage.ts  queue.ts  router.ts  stages.ts  storage.ts  vpc.ts
scripts/: .gitignore  README.md  aaa  generate_by_sku.py  generate_documents.py  generate_service_data.py  pyproject.toml  setup-secrets-interactive.sh  setup-secrets-multi.sh  setup-secrets.sh  sst.pyi
scripts/generated_data/: all_issues.json  dishwashers.json  fryers.json  griddles.json  mixers.json  ovens.json  refrigeration.json
scripts/src/: constants.py  data_generator.py  pdf_generator.py
