[project]
name = "main-foodtools"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Adam Szeptycki", email = "adamszeptycki@gmail.com" }]
readme = "README.md"
requires-python = "==3.11.*"
dependencies = []

[tool.uv.workspace]
members = ["foodtools"]

[tool.uv.sources]
sst = { git = "https://github.com/sst/sst.git", subdirectory = "sdk/python", branch = "dev" }