[project]
name = "foodtools-pdf-generator"
version = "0.1.0"
description = "Generate realistic service documents for FoodTools machines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markdown>=3.5.0",
    "weasyprint>=60.0",
    "faker>=22.0.0",
    "click>=8.1.0",
    "anthropic>=0.39.0",
    "pydantic>=2.0.0",
]
